--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.20",
     "less-loader": "^12.2.0",
+    "lodash.merge": "^4.6.2",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "viem": "2.x",
+    "wagmi": "^2.12.29"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
