--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.12.4",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.20",
+    "antd": "^5.21.6",
     "less-loader": "^12.2.0",
     "lodash.merge": "^4.6.2",
     "notistack": "^3.0.1",
